donation section added

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate Today</title>
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <!-- header banner part start -->
     <header>
         <div class="baner">
             <h1 class="baner-tittle">Let’s Help Those Who Are <br>
@@ -22,6 +25,25 @@
             <button class="btn-primery">Donate Now</button>
         </div>
     </header>
+    <!-- header banner part end -->
+
+    <!-- section one start -->
+    <section class="do-amount">
+        <h1 class="do-tittle">Donate Today</h1>
+        <p class="do-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli<br>
+            deterruisset. No duo populo animal noluisse, enim</p>
+        <ul class="donation-amount">
+            <li class="li1">100tk</li>
+            <li class="li1">200tk</li>
+            <li class="li1">500tk</li>
+            <li class="li1">1000tk</li>
+            <li class="li1">5000tk</li>
+        </ul>
+        <input class="am-drescription" type="number" name="submit" id="" placeholder="Other Amount (Taka)">
+        
+        <hr class="am-line">
+        <button class="btn-primery">Donate Now</button>
+    </section>
     <main>
 
     </main>
