story 1 section added

--- a/index.html
+++ b/index.html
@@ -26,26 +26,76 @@
         </div>
     </header>
     <!-- header banner part end -->
-
-    <!-- section one start -->
-    <section class="do-amount">
-        <h1 class="do-tittle">Donate Today</h1>
-        <p class="do-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli<br>
-            deterruisset. No duo populo animal noluisse, enim</p>
-        <ul class="donation-amount">
-            <li class="li1">100tk</li>
-            <li class="li1">200tk</li>
-            <li class="li1">500tk</li>
-            <li class="li1">1000tk</li>
-            <li class="li1">5000tk</li>
-        </ul>
-        <input class="am-drescription" type="number" name="submit" id="" placeholder="Other Amount (Taka)">
-        
-        <hr class="am-line">
-        <button class="btn-primery">Donate Now</button>
-    </section>
     <main>
+        <!-- section do-amount start -->
+        <section class="do-amount">
+            <h1 class="do-tittle">Donate Today</h1>
+            <p class="do-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli<br>
+                deterruisset. No duo populo animal noluisse, enim</p>
+            <ul class="donation-amount">
+                <li class="li1">100tk</li>
+                <li class="li1">200tk</li>
+                <li class="li1">500tk</li>
+                <li class="li1">1000tk</li>
+                <li class="li1">5000tk</li>
+            </ul>
+            <input class="am-drescription" type="number" name="submit" id="" placeholder="Other Amount (Taka)">
 
+            <hr class="am-line">
+            <button class="btn-primery">Donate Now</button>
+        </section>
+        <!-- section do-amount end -->
+
+        <!-- section do-plan start -->
+        <section class="do-plan">
+            <h1 class="plan-tittle">Our Donate Plan</h1>
+            <p class="plans-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br>
+                deterruisset. No duo populo animal noluisse, enim</p>
+            <div class="plans">
+                <div class="plan1">
+                    <img class="plan-img" src="icons/food.png" alt="">
+                    <h3 class="pplan-title">Food for a family</h3>
+                    <p class="pplan-description">Amet minim mollit non deserunt
+                        ullamco est sit aliqua dolor do amet
+                        sint. Velit officia consequat duis enim
+                        velit mollit.</p>
+                </div>
+                <div class="plan2">
+                    <img src="icons/shelter.png" alt="">
+                    <h3 class="pplan-title">Shelter for a family</h3>
+                    <p class="pplan-description">Amet minim mollit non deserunt
+                        ullamco est sit aliqua dolor do amet
+                        sint. Velit officia consequat duis enim
+                        velit mollit.</p>
+                </div>
+                <div class="plan3">
+                    <img src="icons/Frame-1.png" alt="">
+                    <h3 class="pplan-title">Education for a child</h3>
+                    <p class="pplan-description">Amet minim mollit non deserunt
+                        ullamco est sit aliqua dolor do amet
+                        sint. Velit officia consequat duis enim
+                        velit mollit.</p>
+                </div>
+            </div>
+
+        </section>
+        <!-- section do-plan end -->
+
+        <!-- section story-1 start -->
+        <section class="story">
+            <div class="text">
+                <h1 class="text-story-tittle">Their lives depend on
+                    your donation</h1>
+                <p class="text-story-description">Lorem ipsum dolor sit amet, usu cu esse possit
+                    referrentur, at eam falli deterruisset. No duo populo
+                    animal noluisse, enim <br> <br>
+                    Lorem ipsum dolor sit amet, usu cu esse possit
+                    referrentur, at eam falli deterruisset.</p>
+                <buton class="btn-htc">How to Contribute? </buton>
+            </div>
+            <img src="/images/donation9.jpg" alt="" class="story-img">
+        </section>
+        <!-- section story-1 end -->
     </main>
     <footer>
 
