--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter&family=Lobster&family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -93,12 +94,48 @@
                     referrentur, at eam falli deterruisset.</p>
                 <buton class="btn-htc">How to Contribute? </buton>
             </div>
-            <img src="/images/donation9.jpg" alt="" class="story-img">
+            <div>
+                <img src="images/donation9.jpg" alt="" class="story-img">
+            </div>
+
         </section>
         <!-- section story-1 end -->
-    </main>
-    <footer>
 
+        <!-- section story-2 start -->
+        <section class="story">
+            <div>
+                <img src="images/donation10.jpg" alt="" class="story-img">
+            </div>
+            <div class="text">
+                <h1 class="text-story-tittle">They need us
+                    to suvive</h1>
+                <p class="text-story-description">Lorem ipsum dolor sit amet, usu cu esse possit
+                    referrentur, at eam falli deterruisset. No duo populo
+                    animal noluisse, enim <br> <br>
+                    Lorem ipsum dolor sit amet, usu cu esse possit
+                    referrentur, at eam falli deterruisset.</p>
+                <buton class="btn-htc">How to Contribute? </buton>
+            </div>
+        </section>
+        <!-- section story-2 end -->
+
+        <!-- section update start -->
+        <section class="update">
+            <h1 class="do-tittle">Get My Updates</h1>
+            <p class="do-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli<br>
+                deterruisset. No duo populo animal noluisse, enim</p>
+            <div class="email-submit">
+                <!-- <form action="" class="submit-mail"> -->
+                <input type="email" name="mail" id="" placeholder="Email" class="input-btn">
+                <input type="button" value="Subscribe" class="submit-btn">
+                <!-- </form> -->
+            </div>
+        </section>
+        <!-- section update end -->
+    </main>
+    <footer class="footer">
+        <h1 class="fo-tittle">Be Humble</h1>
+        <p class="fo-description">I’m gonna do it</p>
     </footer>
 </body>
 
